# CPP-Server

./: .gitignore  CMakeLists.txt  Dockerfile  common.cpp  instructions.md  locustfile.py  main.cpp  makefile  readMe.md  rest.http  rest.py  server  server.cpp
.github/workflows/: azure-static-web-apps-witty-beach-0c37f4400.yml
assets/css/: home.css  stream_text.css
assets/downloads/: rest.py
assets/js/: home.js  stream_text.js
assets/logs/: log.csv
config/: privateKey.pem
controllers/: common.cpp  common.hpp  handleFiles.cpp  handleFiles.hpp  homePage.cpp
controllers/utils/: HttpAcceptor.cpp  HttpServer.cpp  sysServerInfo.cpp
includes/: common.hpp  handleFiles.hpp  homePage.hpp
includes/utils/: HttpAcceptor.hpp  HttpServer.hpp  sysServerInfo.hpp
reports/: errors.txt  k6_http_loadtest_18_06_24.html  k6_ws_loadtest_18_06_24.html
routers/: router.cpp  router.hpp
routes/: routes.cpp  routes.hpp
src/: main.cpp  router.cpp  router.hpp
src/auth/: authenticate.cpp  authenticate.hpp  readme.md
src/client/: readme.md  render_html.cpp  render_html.hpp
src/databases/: readme.md  sqlite.cpp  sqlite.hpp
src/files/: download.cpp  download.hpp  readme.md  upload.cpp  upload.hpp  utils.cpp  utils.hpp
src/requests/: get_request.cpp  get_request.hpp  post_request.cpp  post_request.hpp  readme.md  utils.cpp  utils.hpp
src/routes/: http_route.cpp  readme.md  (+2 more)
templates/: home.html  homePage.html  stream_text.html  ws_client_1.html  ws_client_2.html
tests/: instructions.md  k6_http.js  k6_ws.js  locustfile.py  readme.md  rest.http  rest.py  temp.js
(+32 files in other folders)
